Style header and navigation in CSS

--- a/index.html
+++ b/index.html
@@ -2,40 +2,75 @@
 <html lang="en">
     <head>   
         <title>Joseph Manning</title>
+        <link rel="stylesheet" href="./assets/css/style.css"/>
     </head>  
 
     <body>
 
         <!-- Include profile photo -->
         <header>
+            <h1>Joseph Manning</h1>
+            
+            <!-- Place links with unsorted list -->
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#about">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#work">Work</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact Info</a>  
+                    </li>
+                </ul>
+            </nav>
             
         </header>
 
-        <!-- Place links with unsorted list -->
-        <nav>
-            <ul>
-                <li>
-                    <a href="#about">About Me</a>
-                </li>
-                <li>
-                    <a href="#work">Work</a>
-                </li>
-                <li>
-                    <a href="#contact">Contact Info</a>
-                </li>
-            </ul>
-        </nav>
-
-        <!-- Showcase work -->
-        <section>
+        <!-- About me section -->
+        <section class="about">
+            <div>
+                <h2>About Me</h2>
+            </div>
+            <div>
+                <p>
+                    TEXT ABOUT ME
+                </p>
+            </div>  
 
         </section>
 
+        <br>
+
+        <!-- Showcase work -->
+        <!-- <section class="work">
+            <div>
+                <h2>Work</h2>
+            </div>
+            <div>
+                <p>
+                    SHOW WORK
+                </p>
+            </div> 
+
+        </section>
+
+        <br> -->
+
+        <!-- Contact info -->
+        <!-- <section class="contact">
+            <div>
+                <h2>Contact Me</h2>
+            </div>
+            <div>
+                <p>
+                    CONTACT INFO
+                </p>
+            </div> 
+
+        </section> -->
+
     </body>
-
-    <!-- Place contact info in footer -->
-    <footer>
-
-    </footer>
 
 </html>
