Format sections in CSS

--- a/index.html
+++ b/index.html
@@ -28,48 +28,41 @@
             
         </header>
 
+        <br>
+        <br>
+
         <!-- About me section -->
         <section class="about">
-            <div>
                 <h2>About Me</h2>
-            </div>
-            <div>
                 <p>
                     TEXT ABOUT ME
                 </p>
-            </div>  
 
         </section>
 
         <br>
+        <br>
 
         <!-- Showcase work -->
-        <!-- <section class="work">
-            <div>
+        <section class="work">
                 <h2>Work</h2>
-            </div>
-            <div>
                 <p>
                     SHOW WORK
                 </p>
-            </div> 
 
         </section>
 
-        <br> -->
+        <br>
+        <br>
 
         <!-- Contact info -->
-        <!-- <section class="contact">
-            <div>
+        <section class="contact">
                 <h2>Contact Me</h2>
-            </div>
-            <div>
                 <p>
                     CONTACT INFO
-                </p>
-            </div> 
+                </p> 
 
-        </section> -->
+        </section>
 
     </body>
 
