--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                 <p>
                     SHOW WORK
                 </p>
+                <img src="https://via.placeholder.com/400">
+                <img src="https://via.placeholder.com/400">
+                <img src="https://via.placeholder.com/400">
+                <img src="https://via.placeholder.com/400">
+                <img src="https://via.placeholder.com/400">
 
         </section>
 
