Add placeholder images and format for screen resizing

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#about">About Me</a>
+                        <a href=".about">About Me</a>
                     </li>
                     <li>
-                        <a href="#work">Work</a>
+                        <a href=".work">Work</a>
                     </li>
                     <li>
-                        <a href="#contact">Contact Info</a>  
+                        <a href=".contact">Contact Info</a>  
                     </li>
                 </ul>
             </nav>
@@ -34,10 +34,11 @@
         <!-- About me section -->
         <section class="about">
                 <h2>About Me</h2>
+                <div>
                 <p>
                     TEXT ABOUT ME
                 </p>
-
+                </div>
         </section>
 
         <br>
@@ -46,15 +47,38 @@
         <!-- Showcase work -->
         <section class="work">
                 <h2>Work</h2>
-                <p>
-                    SHOW WORK
-                </p>
-                <img src="https://via.placeholder.com/400">
-                <img src="https://via.placeholder.com/400">
-                <img src="https://via.placeholder.com/400">
-                <img src="https://via.placeholder.com/400">
-                <img src="https://via.placeholder.com/400">
-
+                <div class="application">
+                    <div class="refractor">
+                        <img src="https://via.placeholder.com/400">
+                        <div id="refractor">
+                        <h4>Refractor</h4>
+                        </div>
+                    </div>
+                    <div class="app2">
+                        <img src="https://via.placeholder.com/400">
+                        <div id="app2">
+                        <h4>Application2</h4>
+                        </div>
+                    </div>
+                    <div class="app3">
+                        <img src="https://via.placeholder.com/400">
+                        <div id="app3">
+                        <h4>Application3</h4>
+                        </div>
+                    </div>
+                    <div class="app4">
+                        <img src="https://via.placeholder.com/400">
+                        <div id="app4">
+                        <h4>Application4</h4>
+                        </div>
+                    </div>
+                    <div class="app5">
+                        <img src="https://via.placeholder.com/400">
+                        <div id="app5">
+                        <h4>Application5</h4>
+                        </div>
+                    </div>
+                </div>
         </section>
 
         <br>
@@ -63,10 +87,11 @@
         <!-- Contact info -->
         <section class="contact">
                 <h2>Contact Me</h2>
+                <div>
                 <p>
                     CONTACT INFO
                 </p> 
-
+                </div>
         </section>
 
     </body>
