Stylize header/navigation section

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <body>
 
         <!-- Include profile photo -->
-        <header>
+        <header class="header">
+            <img src="https://via.placeholder.com/250" id="profile">
             <h1>Joseph Manning</h1>
             
             <!-- Place links with unsorted list -->
+        <section class="navigation">
             <nav>
                 <ul>
                     <li>
@@ -25,9 +27,8 @@
                     </li>
                 </ul>
             </nav>
-            
+        </section>
         </header>
-
         <br>
         <br>
 
