--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 <nav>
                     <ul>
                         <li>
-                            <a href=".about">About Me</a>
+                            <a href="#About Me">About Me</a>
                         </li>
                         <li>
-                            <a href=".work">Work</a>
+                            <a href="#Work">Work</a>
                         </li>
                         <li>
-                            <a href=".contact">Contact Info</a>  
+                            <a href="#Contact Me">Contact Info</a>  
                         </li>
                     </ul>
                 </nav>
@@ -37,7 +37,8 @@
 
         <!-- About me section -->
         <section class="about">
-                <h2>About Me</h2>
+            <a name="About Me"></a>   
+            <h2>About Me</h2>
                 <div>
                 <p>
                     TEXT ABOUT ME
@@ -50,7 +51,8 @@
 
         <!-- Showcase work -->
         <section class="work">
-                <h2>Work</h2>
+            <a name="Work"></a>    
+            <h2>Work</h2>
                 <div class="application">
                     <div class="refractor">
                         <img src="https://via.placeholder.com/400">
@@ -90,7 +92,8 @@
 
         <!-- Contact info -->
         <section class="contact">
-                <h2>Contact Me</h2>
+            <a name="Contact Me"></a>    
+            <h2>Contact Me</h2>
                 <div>
                 <p>
                     CONTACT INFO
