Format contact me section

--- a/index.html
+++ b/index.html
@@ -1,106 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>   
-        <title>Joseph Manning</title>
-        <link rel="stylesheet" href="./assets/css/style.css"/>
-    </head>  
+  <head>
+    <title>Joseph Manning</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
 
-    <body>
+  <body>
+    <!-- Include profile photo -->
+    <header class="header">
+      <section class="name">
+        <img src="./assets/images/profile_pic.jpg" id="profile" />
+        <h1>Joseph Manning</h1>
+      </section>
 
-        <!-- Include profile photo -->
-        <header class="header">
-        
-            <section class="name">
-                <img src="https://via.placeholder.com/250" id="profile">
-                <h1>Joseph Manning</h1>
-            </section>
-        
-                <!-- Place links with unsorted list -->
-            <section class="navigation">
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="#About Me">About Me</a>
-                        </li>
-                        <li>
-                            <a href="#Work">Work</a>
-                        </li>
-                        <li>
-                            <a href="#Contact Me">Contact Info</a>  
-                        </li>
-                    </ul>
-                </nav>
-            </section>
-            </header>
-        <br>
-        <br>
+      <!-- Place links with unsorted list -->
+      <section class="navigation">
+        <nav>
+          <ul>
+            <li>
+              <a href="#About Me">About Me</a>
+            </li>
+            <li>
+              <a href="#Work">Work</a>
+            </li>
+            <li>
+              <a href="#Contact Me">Contact Info</a>
+            </li>
+          </ul>
+        </nav>
+      </section>
+    </header>
+    <br />
+    <br />
 
-        <!-- About me section -->
-        <section class="about">
-            <a name="About Me"></a>   
-            <h2>About Me</h2>
-                <div>
-                <p>
-                    TEXT ABOUT ME
-                </p>
-                </div>
-        </section>
+    <!-- About me section -->
+    <section class="about">
+      <a name="About Me"></a>
+      <h2>About Me</h2>
+      <div>
+        <p>
+          I am a web development student from the University of Arizona. Before
+          taking on the role of student I was a team lead for an internationally
+          known toy company helping to oversee the merchandising team and
+          ensuring that our product was properly represented on the retail
+          shelf. I am looking to take my knowledge and experience in the retail
+          environment and combine it with my new skills as a web developer to
+          ensure a one-of-a-kind online experience for the user.
+        </p>
+        <br /><br />
+        <p>
+          In my freetime you can find me getting out in nature and hiking the
+          local trails in the Arizona desert, or heading north to cooler
+          climates.
+        </p>
+      </div>
+    </section>
 
-        <br>
-        <br>
+    <br />
+    <br />
 
-        <!-- Showcase work -->
-        <section class="work">
-            <a name="Work"></a>    
-            <h2>Work</h2>
-                <div class="application">
-                    <div class="refractor">
-                        <img src="https://via.placeholder.com/400">
-                        <div id="refractor">
-                        <h3>Refractor</h3>
-                        </div>
-                    </div>
-                    <div class="app2">
-                        <img src="https://via.placeholder.com/400">
-                        <div id="app2">
-                        <h3>Application2</h3>
-                        </div>
-                    </div>
-                    <div class="app3">
-                        <img src="https://via.placeholder.com/400">
-                        <div id="app3">
-                        <h3>Application3</h3>
-                        </div>
-                    </div>
-                    <div class="app4">
-                        <img src="https://via.placeholder.com/400">
-                        <div id="app4">
-                        <h3>Application4</h3>
-                        </div>
-                    </div>
-                    <div class="app5">
-                        <img src="https://via.placeholder.com/400">
-                        <div id="app5">
-                        <h3>Application5</h3>
-                        </div>
-                    </div>
-                </div>
-        </section>
+    <!-- Showcase work -->
+    <section class="work">
+      <a name="Work"></a>
+      <h2>Work</h2>
+      <div class="application">
+        <div class="refractor">
+          <!-- Link to refractor site homework -->
+          <a href="https://jman4342.github.io/CodeRefactor/">
+            <img src="./assets/images/horiseon_pic.jpeg" />
+          </a>
+          <div id="refractor">
+            <h3>Refractor</h3>
+          </div>
+        </div>
+        <div class="app2">
+          <img src="https://via.placeholder.com/400" />
+          <div id="app2">
+            <h3>Application2</h3>
+          </div>
+        </div>
+        <div class="app3">
+          <img src="https://via.placeholder.com/400" />
+          <div id="app3">
+            <h3>Application3</h3>
+          </div>
+        </div>
+        <div class="app4">
+          <img src="https://via.placeholder.com/400" />
+          <div id="app4">
+            <h3>Application4</h3>
+          </div>
+        </div>
+        <div class="app5">
+          <img src="https://via.placeholder.com/400" />
+          <div id="app5">
+            <h3>Application5</h3>
+          </div>
+        </div>
+      </div>
+    </section>
 
-        <br>
-        <br>
+    <br />
+    <br />
 
-        <!-- Contact info -->
-        <section class="contact">
-            <a name="Contact Me"></a>    
-            <h2>Contact Me</h2>
-                <div>
-                <p>
-                    CONTACT INFO
-                </p> 
-                </div>
-        </section>
-
-    </body>
-
+    <!-- Contact info -->
+    <section class="contact">
+      <a name="Contact Me"></a>
+      <h2>Contact Me</h2>
+      <div class="info">
+            <p>
+                <strong>555-555-1663</strong>
+            </p>
+            <p>
+                <a href="mailto:manning.joseph.4342@gmail.com">Email</a>
+            </p>
+            <p>
+                <a href="https://github.com/JMan4342" target="_blank">GitHub</a>
+            </p>
+        </div>
+    </section>
+  </body>
 </html>
