--- a/index.html
+++ b/index.html
@@ -64,38 +64,49 @@
       <a name="Work"></a>
       <h2>Work</h2>
       <div class="application">
-        <div class="refractor">
-          <!-- Link to refractor site homework -->
-          <a href="https://jman4342.github.io/CodeRefactor/">
-            <img src="./assets/images/horiseon_pic.jpeg" />
+        <div class="app1">
+          <a href="https://jman4342.github.io/Hair-Dresser/Hairdresser.html" target="_blank">
+            <img src="./assets/images/HairDress_Site.jpeg" />
           </a>
-          <div id="refractor">
-            <h3>Refractor</h3>
+          <div id="app1">
+            <a href="https://github.com/JMan4342/Hair-Dresser" target="_blank">
+            <h3>Hairdresser Webpage</h3>
+            </a>
           </div>
         </div>
-        <div class="app2">
-          <img src="https://via.placeholder.com/400" />
-          <div id="app2">
-            <h3>Application2</h3>
+        <div id="subProj">
+          <div class="app2">
+            <a href="https://jman4342.github.io/Weather-Dashboard/" target="_blank">
+              <img src="./assets/images/saved_search_results1.jpeg" />
+            </a>
+            <div id="app2">
+              <a href="https://github.com/JMan4342/Weather-Dashboard" target="_blank">
+              <h3>Weather Dashboard</h3>
+              </a>
+            </div>
           </div>
-        </div>
-        <div class="app3">
-          <img src="https://via.placeholder.com/400" />
-          <div id="app3">
-            <h3>Application3</h3>
+          <div class="app3">
+            <a href="https://jman4342.github.io/Code-Quiz/" target="_blank">
+              <img src="./assets/images/JavaScript_Quiz1.jpeg" />
+            </a>
+            <div id="app3">
+              <a href="https://github.com/JMan4342/Code-Quiz" target="_blank">
+              <h3>JavaScript Quiz</h3>
+              </a>
+            </div>
           </div>
-        </div>
-        <div class="app4">
-          <img src="https://via.placeholder.com/400" />
-          <div id="app4">
-            <h3>Application4</h3>
+          <!-- <div class="app4">
+            <img src="https://via.placeholder.com/400" />
+            <div id="app4">
+              <h3>Application4</h3>
+            </div>
           </div>
-        </div>
-        <div class="app5">
-          <img src="https://via.placeholder.com/400" />
-          <div id="app5">
-            <h3>Application5</h3>
-          </div>
+          <div class="app5">
+            <img src="https://via.placeholder.com/400" />
+            <div id="app5">
+              <h3>Application5</h3>
+            </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -109,13 +120,16 @@
       <h2>Contact Me</h2>
       <div class="info">
             <p>
-                <strong>555-555-1663</strong>
+                480-710-1663
             </p>
             <p>
                 <a href="mailto:manning.joseph.4342@gmail.com">Email</a>
             </p>
             <p>
                 <a href="https://github.com/JMan4342" target="_blank">GitHub</a>
+            </p>
+            <p>
+              <a href="https://github.com/JMan4342" target="_blank">Resume</a>
             </p>
         </div>
     </section>
