--- a/index.html
+++ b/index.html
@@ -65,23 +65,32 @@
       <h2>Work</h2>
       <div class="application">
         <div class="app1">
-          <a href="https://jman4342.github.io/Hair-Dresser/Hairdresser.html" target="_blank">
+          <a
+            href="https://jman4342.github.io/Hair-Dresser/Hairdresser.html"
+            target="_blank"
+          >
             <img src="./assets/images/HairDress_Site.jpeg" />
           </a>
           <div id="app1">
             <a href="https://github.com/JMan4342/Hair-Dresser" target="_blank">
-            <h3>Hairdresser Webpage</h3>
+              <h3>Hairdresser Webpage</h3>
             </a>
           </div>
         </div>
         <div id="subProj">
           <div class="app2">
-            <a href="https://jman4342.github.io/Weather-Dashboard/" target="_blank">
+            <a
+              href="https://jman4342.github.io/Weather-Dashboard/"
+              target="_blank"
+            >
               <img src="./assets/images/saved_search_results1.jpeg" />
             </a>
             <div id="app2">
-              <a href="https://github.com/JMan4342/Weather-Dashboard" target="_blank">
-              <h3>Weather Dashboard</h3>
+              <a
+                href="https://github.com/JMan4342/Weather-Dashboard"
+                target="_blank"
+              >
+                <h3>Weather Dashboard</h3>
               </a>
             </div>
           </div>
@@ -91,7 +100,7 @@
             </a>
             <div id="app3">
               <a href="https://github.com/JMan4342/Code-Quiz" target="_blank">
-              <h3>JavaScript Quiz</h3>
+                <h3>JavaScript Quiz</h3>
               </a>
             </div>
           </div>
@@ -119,19 +128,21 @@
       <a name="Contact Me"></a>
       <h2>Contact Me</h2>
       <div class="info">
-            <p>
-                480-710-1663
-            </p>
-            <p>
-                <a href="mailto:manning.joseph.4342@gmail.com">Email</a>
-            </p>
-            <p>
-                <a href="https://github.com/JMan4342" target="_blank">GitHub</a>
-            </p>
-            <!-- <p>
-              <a href="https://github.com/JMan4342" target="_blank">Resume</a>
-            </p> -->
-        </div>
+        <p>480-710-1663</p>
+        <p>
+          <a href="mailto:manning.joseph.4342@gmail.com">Email</a>
+        </p>
+        <p>
+          <a href="https://github.com/JMan4342" target="_blank">GitHub</a>
+        </p>
+        <p>
+          <a
+            href="https://drive.google.com/file/d/14tn1BayFF4U2h68-DrqUU1B5sYq3eTRO/view?usp=sharing"
+            target="_blank"
+            >Resume</a
+          >
+        </p>
+      </div>
     </section>
   </body>
 </html>
