--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             href="https://jman4342.github.io/Hair-Dresser/Hairdresser.html"
             target="_blank"
           >
-            <img src="./assets/images/HairDress_Site.jpeg" />
+            <img src="./assets/images/HairDress_Site.jpeg"/>
           </a>
           <div id="app1">
             <a href="https://github.com/JMan4342/Hair-Dresser" target="_blank">
@@ -83,7 +83,7 @@
               href="https://jman4342.github.io/Weather-Dashboard/"
               target="_blank"
             >
-              <img src="./assets/images/saved_search_results1.jpeg" />
+              <img src="./assets/images/saved_search_results1.jpeg"/>
             </a>
             <div id="app2">
               <a
@@ -96,7 +96,7 @@
           </div>
           <div class="app3">
             <a href="https://jman4342.github.io/Code-Quiz/" target="_blank">
-              <img src="./assets/images/JavaScript_Quiz1.jpeg" />
+              <img src="./assets/images/JavaScript_Quiz1.jpeg"/>
             </a>
             <div id="app3">
               <a href="https://github.com/JMan4342/Code-Quiz" target="_blank">
@@ -104,20 +104,25 @@
               </a>
             </div>
           </div>
-          <!-- <div class="app4">
-            <img src="https://via.placeholder.com/400" />
+          <div class="app4">
+            <a href="https://tech-blog0713.herokuapp.com/" target="_blank">
+              <img src="./assets/images/TechBlog.jpeg"/>
+            </a>
             <div id="app4">
-              <h3>Application4</h3>
+              <a href="https://github.com/JMan4342/TechBlog" target="_blank">
+                <h3>Technology Blog</h3>
+              </a>
             </div>
           </div>
-          <div class="app5">
+          <!-- <div class="app5">
             <img src="https://via.placeholder.com/400" />
             <div id="app5">
               <h3>Application5</h3>
             </div>
           </div> -->
-        </div>
+        <!-- </div>
       </div>
+      -->
     </section>
 
     <br />
