--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Joseph Manning</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <script src="https://kit.fontawesome.com/5e3b181397.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -73,8 +74,9 @@
           </a>
           <div id="app1">
             <a href="https://github.com/JMan4342/Hair-Dresser" target="_blank">
-              <h3>Hairdresser Webpage</h3>
+              <i class="fab fa-github"></i>
             </a>
+              <h3>Hairdresser Webpage</h3>
           </div>
         </div>
         <div id="subProj">
@@ -90,8 +92,9 @@
                 href="https://github.com/JMan4342/Weather-Dashboard"
                 target="_blank"
               >
+              <i class="fab fa-github"></i>
+            </a>
                 <h3>Weather Dashboard</h3>
-              </a>
             </div>
           </div>
           <div class="app3">
@@ -100,8 +103,9 @@
             </a>
             <div id="app3">
               <a href="https://github.com/JMan4342/Code-Quiz" target="_blank">
-                <h3>JavaScript Quiz</h3>
+                <i class="fab fa-github"></i>
               </a>
+                <h3>JavaScript Quiz</h3>
             </div>
           </div>
           <div class="app4">
@@ -110,8 +114,9 @@
             </a>
             <div id="app4">
               <a href="https://github.com/JMan4342/TechBlog" target="_blank">
-                <h3>Technology Blog</h3>
+                <i class="fab fa-github"></i>
               </a>
+                <h3>Technology Blog</h3>
             </div>
           </div>
           <!-- <div class="app5">
@@ -133,20 +138,27 @@
       <a name="Contact Me"></a>
       <h2>Contact Me</h2>
       <div class="info">
-        <p>480-710-1663</p>
-        <p>
-          <a href="mailto:manning.joseph.4342@gmail.com">Email</a>
-        </p>
-        <p>
-          <a href="https://github.com/JMan4342" target="_blank">GitHub</a>
-        </p>
-        <p>
+        <div>
+          <i class="fas fa-phone fa-2x"></i>
+          <p>480-710-1663</p>
+        </div>
+        <div>
+          <a href="mailto:manning.joseph.4342@gmail.com">
+            <i class="fas fa-envelope fa-2x"></i>
+          </a>
+        </div>
+        <div>
+          <a href="https://github.com/JMan4342" target="_blank">
+            <i class="fab fa-github fa-2x"></i>
+          </a>
+        </div>
+        <div>
           <a
-            href="https://drive.google.com/file/d/1bFjdyjCeZouiSrhNvLjoH2hMBxn7EaZN/view?usp=sharing"
-            target="_blank"
-            >Resume</a
-          >
-        </p>
+            href="https://docs.google.com/document/d/1syMsJFVZKiUqJ1C25XclOY67Ef7Cig0o6YSetOtE0y4/edit?usp=sharing"
+            target="_blank">
+            <i class="fas fa-file fa-2x"></i>
+            </a>
+        </div>
       </div>
     </section>
   </body>
